// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomBadge component match snapshot for 0 1`] = `null`;

exports[`CustomBadge component match snapshot for 10 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#0073E6",
        "borderColor": "#FFFFFF",
        "borderRadius": 10,
        "borderWidth": 2,
        "bottom": 10,
        "height": 20,
        "justifyContent": "center",
        "left": 12,
        "paddingLeft": 0,
        "paddingRight": 0,
        "position": "absolute",
        "width": 20,
      },
      Object {
        "width": 24,
      },
    ]
  }
  testID="badgeTestID"
>
  <Text
    accessible={false}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontSize": 10,
        "fontStyle": "normal",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    10
  </Text>
</View>
`;

exports[`CustomBadge component match snapshot for 100 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#0073E6",
        "borderColor": "#FFFFFF",
        "borderRadius": 10,
        "borderWidth": 2,
        "bottom": 10,
        "height": 20,
        "justifyContent": "center",
        "left": 12,
        "paddingLeft": 0,
        "paddingRight": 0,
        "position": "absolute",
        "width": 20,
      },
      Object {
        "width": 28,
      },
    ]
  }
  testID="badgeTestID"
>
  <Text
    accessible={false}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontSize": 10,
        "fontStyle": "normal",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    99+
  </Text>
</View>
`;
